feat: Implement AutoSwitch feature with UI and service integration
- Added AutoSwitchCandidateAdapter for displaying proxy candidates in the UI.
- Created layout files for adapter and main AutoSwitch design.
- Developed AutoSwitchModule to handle automatic proxy switching logic.
- Introduced AutoSwitchConfig and AutoSwitchStatusSnapshot models for configuration and status management.
- Implemented AutoSwitchStore for persistent storage of AutoSwitch settings.
- Added drawable resources for UI elements related to AutoSwitch.

--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -257,4 +257,42 @@
     <string name="external_control_activity">外部控制</string>
     <string name="external_control_started">Clash.Meta 服务已启动</string>
     <string name="external_control_stopped">Clash.Meta 服务已停止</string>
+    <string name="auto_switch_title">自动换节点</string>
+    <string name="auto_switch_enable">启用自动换节点</string>
+    <string name="auto_switch_enable_hint">当当前节点不稳定时，自动测速并在你选择的节点之间切换。</string>
+    <string name="auto_switch_group_hint">目标选择器分组</string>
+    <string name="auto_switch_interval_hint">探测间隔（秒）</string>
+    <string name="auto_switch_cooldown_hint">最小切换间隔（秒）</string>
+    <string name="auto_switch_prefer_stable">仅使用有延迟数据的节点</string>
+    <string name="auto_switch_candidates_title">候选节点</string>
+    <string name="auto_switch_select_all">全选</string>
+    <string name="auto_switch_clear_all">清空</string>
+    <string name="auto_switch_empty">该分组没有可用节点</string>
+    <string name="auto_switch_saved">自动换节点配置已更新</string>
+    <string name="auto_switch_no_groups">没有可用的代理分组，请先加载配置。</string>
+    <string name="auto_switch_load_groups_failed">无法获取代理分组</string>
+    <string name="auto_switch_group_not_selector">所选分组不支持自动切换</string>
+    <string name="auto_switch_load_group_failed">无法获取该分组的节点</string>
+    <string name="auto_switch_latency_testing">正在测速…</string>
+    <string name="auto_switch_latency_success">延迟已更新于 %1$s</string>
+    <string name="auto_switch_latency_failed">测速失败</string>
+    <string name="auto_switch_latency_refresh">重新测速</string>
+    <string name="auto_switch_latency_format_ms">%1$d 毫秒</string>
+    <string name="auto_switch_latency_unavailable">暂无数据</string>
+    <string name="auto_switch_latency_timeout">超时</string>
+    <string name="auto_switch_candidate_with_latency">%1$s · %2$s</string>
+    <string name="auto_switch_latency_quality_fast">极快</string>
+    <string name="auto_switch_latency_quality_moderate">良好</string>
+    <string name="auto_switch_latency_quality_slow">偏慢</string>
+    <string name="auto_switch_latency_quality_timeout">离线</string>
+    <string name="auto_switch_latency_quality_unknown">未知</string>
+    <string name="auto_switch_latency_quality_format">%1$s · %2$s</string>
+    <string name="auto_switch_status_disabled">未开启</string>
+    <string name="auto_switch_status_enabled">已开启 · %1$s · %2$d 个候选 · 每 %3$d 秒探测</string>
+    <string name="auto_switch_status_enabled_no_candidates">已开启 · %1$s · 请至少选择一个候选节点</string>
+    <string name="auto_switch_runtime_status_format">上次更新 %1$s · %2$s</string>
+    <string name="auto_switch_runtime_status_time_unknown">--:--</string>
+    <string name="auto_switch_status_current_allowed">当前 %1$s（在候选范围内）</string>
+    <string name="auto_switch_status_current_blocked">当前 %1$s（不在候选范围内）</string>
+    <string name="auto_switch_status_current_none">当前未选择节点</string>
 </resources>
