--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="receive_clash_broadcasts">Receive Clash Broadcasts</string>
     <string name="receive_broadcasts_of_clash">Receive broadcasts of clash services</string>
-    <string name="application_name_alpha">Clash Meta for Android Alpha</string>
+    <string name="application_name_alpha">智能玩家工具</string>
     <string name="launch_name_alpha">Clash Meta Alpha</string>
     <string name="application_name_meta">Clash Meta for Android</string>
     <string name="launch_name_meta">Clash Meta</string>
