--- a/hideapi/src/main/res/values/strings.xml
+++ b/hideapi/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="application_name_alpha">Clash Meta for Android Alpha</string>
+    <string name="application_name_alpha">智能玩家工具</string>
     <string name="launch_name_alpha">Clash Meta Alpha</string>
     <string name="application_name_meta">Clash Meta for Android</string>
     <string name="launch_name_meta">Clash Meta</string>
